@@ -75,33 +75,33 @@ dist_exportpeaks_test_SOURCES = exportpeaks_test.c
 dist_deleteaudio_test_SOURCES = deleteaudio_test.c 
 dist_copyaudio_test_SOURCES = copyaudio_test.c 
 
-listgroups_test_LDADD = -lcurl -lrivwebcapi -lexpat
-listgroup_test_LDADD = -lcurl -lrivwebcapi -lexpat
-listcarts_test_LDADD = -lcurl -lrivwebcapi -lexpat
-listcart_test_LDADD = -lcurl -lrivwebcapi -lexpat
-listcuts_test_LDADD = -lcurl -lrivwebcapi -lexpat
-listcut_test_LDADD = -lcurl -lrivwebcapi -lexpat
-listschedcodes_test_LDADD = -lcurl -lrivwebcapi -lexpat
-assignschedcode_test_LDADD = -lcurl -lrivwebcapi -lexpat
-listcartschedcodes_test_LDADD = -lcurl -lrivwebcapi -lexpat
-unassignschedcode_test_LDADD = -lcurl -lrivwebcapi -lexpat
-addcart_test_LDADD  = -lcurl -lrivwebcapi -lexpat
-addcut_test_LDADD  = -lcurl -lrivwebcapi -lexpat
-removecart_test_LDADD  = -lcurl -lrivwebcapi -lexpat
-removecut_test_LDADD  = -lcurl -lrivwebcapi -lexpat
-audioinfo_test_LDADD  = -lcurl -lrivwebcapi -lexpat
-audiostore_test_LDADD  = -lcurl -lrivwebcapi -lexpat
-trimaudio_test_LDADD  = -lcurl -lrivwebcapi -lexpat
-listlog_test_LDADD  = -lcurl -lrivwebcapi -lexpat
-listlogs_test_LDADD  = -lcurl -lrivwebcapi -lexpat
-listservices_test_LDADD  = -lcurl -lrivwebcapi -lexpat
-editcart_test_LDADD  = -lcurl -lrivwebcapi -lexpat
-editcut_test_LDADD  = -lcurl -lrivwebcapi -lexpat
-importcart_test_LDADD  = -lcurl -lrivwebcapi -lexpat
-exportcart_test_LDADD  = -lcurl -lrivwebcapi -lexpat
-exportpeaks_test_LDADD  = -lcurl -lrivwebcapi -lexpat
-deleteaudio_test_LDADD  = -lcurl -lrivwebcapi -lexpat
-copyaudio_test_LDADD  = -lcurl -lrivwebcapi -lexpat
+listgroups_test_LDADD = -lrivwebcapi -lexpat -lcurl
+listgroup_test_LDADD = -lrivwebcapi -lexpat -lcurl
+listcarts_test_LDADD =  -lrivwebcapi -lexpat -lcurl
+listcart_test_LDADD =  -lrivwebcapi -lexpat -lcurl
+listcuts_test_LDADD =  -lrivwebcapi -lexpat -lcurl
+listcut_test_LDADD =  -lrivwebcapi -lexpat -lcurl
+listschedcodes_test_LDADD =  -lrivwebcapi -lexpat -lcurl
+assignschedcode_test_LDADD =  -lrivwebcapi -lexpat -lcurl
+listcartschedcodes_test_LDADD =  -lrivwebcapi -lexpat -lcurl
+unassignschedcode_test_LDADD =  -lrivwebcapi -lexpat -lcurl
+addcart_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
+addcut_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
+removecart_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
+removecut_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
+audioinfo_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
+audiostore_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
+trimaudio_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
+listlog_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
+listlogs_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
+listservices_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
+editcart_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
+editcut_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
+importcart_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
+exportcart_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
+exportpeaks_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
+deleteaudio_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
+copyaudio_test_LDADD  =  -lrivwebcapi -lexpat -lcurl
 
 CLEANFILES = *~\
              moc_*
